--- a/gridPractice.html
+++ b/gridPractice.html
@@ -21,5 +21,14 @@
         <div class="grid-item">8</div>
         <div class="grid-item">9</div></div>
     </section>
+    <section>
+        <h2>Пример 2: Макет страницы</h2>
+        <div class="page-layout">
+            <header class="header">Header</header>
+            <aside class="aside">Sidebar</aside>
+            <main class="main">Main Content</main>
+            <footer class="footer">Footer</footer>
+        </div>
+    </section>
 </body>
 </html>
